<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Developed by arieftb on 6/22/19 9:54 PM.
  ~ Last Modified 6/22/19 9:40 PM.
  ~ Copyright (c) 2019. All rights reserved.
  ~ www.arieftb.com
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".persentation.main.MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_main_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:elevation="4dp"
        app:itemTextColor="@drawable/menu_title_nav_bottom_state"
        app:itemIconTint="@drawable/menu_icon_nav_bottom_state"
        app:menu="@menu/menu_nav_main_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frame_main_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_soft_gray"
        app:layout_constraintBottom_toTopOf="@id/nav_main_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>